--- a/index.html
+++ b/index.html
@@ -5,39 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hantaphao Project</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        /* Additional style adjustments can go here */
+    </style>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="img/logo.png" alt="Logo">
+        </div>
+        <ul class="nav-links">
+            <li><a href="#">เกี่ยวกับโครงการ</a></li>
+            <li><a href="#">ผลิตภัณฑ์</a></li>
+            <li><a href="#">ข่าวสารจากชุมชน</a></li>
+            <li><a href="#">คำถามที่พบบ่อย</a></li>
+        </ul>
+        <div class="cart">
+            <a href="#"><i class="fas fa-shopping-cart"></i></a>
+        </div>
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
+    </nav>
+
     <header>
-        <div class = "banner">
-            <img src="img/Banner_home.jpg">
+        <div class="banner">
+            <img src="img/Banner_home.jpg" alt="Banner">
         </div>
     </header>
-    <nav>
-        <a href="#">เกี่ยวกับโครงการ</a>
-        <a href="#">ผลิตภัณฑ์</a>
-        <a href="#">ข่าวสารชุมชน</a>
-        <a href="#">คำถามที่พบบ่อย</a>
-    </nav>
+
     <div class="container">
         <div class="project">
-            <img src="example-picture.jpg" alt="Example Picture">
+            <img src="img/example-picture.jpg" alt="Example Picture">
             <div class="project-details">
                 <h2>Hantaphao Project</h2>
-                <p>The objective of the Hantaphao project is to provide sustainable development for the community by integrating natural resource management and environmental conservation. This project aims to enhance the quality of life for the local community through sustainable practices.</p>
+                <p>วัตถุประสงค์ของโครงการ Hantaphao คือการให้การพัฒนาที่ยั่งยืนให้กับชุมชนโดยการผสมผสานการจัดการทรัพยากรธรรมชาติและการอนุรักษ์สิ่งแวดล้อม โครงการนี้มุ่งเน้นการเพิ่มคุณภาพชีวิตของชุมชนในท้องถิ่นผ่านการปฏิบัติที่ยั่งยืน</p>
             </div>
         </div>
         <div class="objective">
             <h3>วัตถุประสงค์</h3>
-            <p>เป็นการพัฒนาชุมชนที่ยั่งยืนผ่านการจัดการทรัพยากรธรรมชาติและการอนุรักษ์สิ่งแวดล้อม เพื่อให้เกิดการพัฒนาคุณภาพชีวิตของชุมชนในท้องถิ่นอย่างยั่งยืนและเป็นมิตรกับสิ่งแวดล้อม</p>
-            <p>หัวข้อรอง เป็นการพัฒนาชุมชนที่ยั่งยืนผ่านการจัดการทรัพยากรธรรมชาติและการอนุรักษ์สิ่งแวดล้อม</p>
-            <p>หัวข้อรอง เป็นการพัฒนาชุมชนที่ยั่งยืนผ่านการจัดการทรัพยากรธรรมชาติและการอนุรักษ์สิ่งแวดล้อม เพื่อให้เกิดการพัฒนาคุณภาพชีวิตของชุมชนในท้องถิ่นอย่างยั่งยืน</p>
+            <p>โครงการ Hantaphao มีเป้าหมายที่จะสร้างการพัฒนาที่ยั่งยืนให้กับชุมชนโดยการจัดการทรัพยากรธรรมชาติและการอนุรักษ์สิ่งแวดล้อม</p>
         </div>
         <div class="product">
             <h3>ผลิตภัณฑ์</h3>
-            <img src="product-image.jpg" alt="Product Image">
+            <img src="img/product-image.jpg" alt="Product Image">
         </div>
     </div>
+
     <footer>
         <div class="contact">
             <div>
@@ -53,11 +69,13 @@
                 <p>contact@hantaphao.com</p>
             </div>
             <div>
-                <h4>Other contact</h4>
+                <h4>สื่อสังคมออนไลน์</h4>
                 <p>Facebook | LINE</p>
             </div>
         </div>
         <p>©2024 Hantaphao Projects All rights reserved.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
