--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hantaphao Project</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <style>
-        /* Additional style adjustments can go here */
-    </style>
 </head>
 <body>
     <nav class="navbar">
@@ -23,14 +20,21 @@
             <li><a href="#">คำถามที่พบบ่อย</a></li>
         </ul>
         <div class="cart">
-            <a href="#"><i class="fas fa-shopping-cart"></i></a>
-        </div>
-        <div class="menu-toggle">
-            <i class="fas fa-bars"></i>
+            <a href="#">
+                <i class="fas fa-shopping-cart"></i>
+                <!-- หรือถ้าต้องการใช้รูปภาพแทนไอคอน -->
+                <!-- <img src="img/cart-icon.png" alt="Cart"> -->
+            </a>
         </div>
     </nav>
 
     <header>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
         <div class="banner">
             <img src="img/Banner_home.jpg" alt="Banner">
         </div>
