--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
         </div>
         <p>©2024 Hantaphao Projects All rights reserved.</p>
     </footer>
-
-
+    <script src="script.js"></script>
 </body>
 </html>
