--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
             <li><a href="#">ผลิตภัณฑ์</a></li>
             <li><a href="#">ข่าวสารจากชุมชน</a></li>
             <li><a href="#">คำถามที่พบบ่อย</a></li>
-        </ul>
         <div class="cart">
-            <a href="#">
+            <a href="product.html">
                 <i class="fas fa-shopping-cart"></i>
                 <!-- หรือถ้าต้องการใช้รูปภาพแทนไอคอน -->
                 <!-- <img src="img/cart-icon.png" alt="Cart"> -->
