--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <li><a href="#">ข่าวสารจากชุมชน</a></li>
             <li><a href="#">คำถามที่พบบ่อย</a></li>
         <div class="cart">
-            <a href="product.html">
+            <a href="product_cart.html">
                 <i class="fas fa-shopping-cart"></i>
                 <!-- หรือถ้าต้องการใช้รูปภาพแทนไอคอน -->
                 <!-- <img src="img/cart-icon.png" alt="Cart"> -->
