--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="#">เกี่ยวกับโครงการ</a></li>
-            <li><a href="#">ผลิตภัณฑ์</a></li>
+            <li><a href="product.html">ผลิตภัณฑ์</a></li>
             <li><a href="#">ข่าวสารจากชุมชน</a></li>
             <li><a href="#">คำถามที่พบบ่อย</a></li>
         <div class="cart">
