--- a/topnavbar.html
+++ b/topnavbar.html
@@ -30,7 +30,9 @@
 
     <header>
         <div class="banner">
-            <img src="img/Banner_home.jpg" alt="Banner">
+            <a href="index.html">
+                <img src="img/Banner_home.jpg" alt="Banner">
+            </a>
         </div>
     </header>
 </body>
