--- a/topnavbar.html
+++ b/topnavbar.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">
-            <img src="img/logo.png" alt="Logo">
+                <img src="img/logo.png" alt="Logo">
             </a>
         </div>
         <ul class="nav-links">
@@ -35,5 +36,29 @@
             <img src="img/Banner_home.jpg" alt="Banner">
         </div>
     </header>
+
+    <footer>
+        <div class="contact">
+            <div>
+                <h4>ติดต่อเรา</h4>
+                <p>123 หมู่ 4 ตำบลบ้านโฮ่ง อำเภอบ้านโฮ่ง จังหวัดลำพูน</p>
+            </div>
+            <div>
+                <h4>เบอร์ติดต่อ</h4>
+                <p>081-234-5678</p>
+            </div>
+            <div>
+                <h4>Email</h4>
+                <p>contact@hantaphao.com</p>
+            </div>
+            <div>
+                <h4>สื่อสังคมออนไลน์</h4>
+                <p>Facebook | LINE</p>
+            </div>
+        </div>
+        <p>©2024 Hantaphao Projects All rights reserved.</p>
+    </footer>
+
+    <script src="/js/script.js"></script>
 </body>
 </html>
