--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
             <li><a href="#">ผลิตภัณฑ์</a></li>
             <li><a href="#">ข่าวสารจากชุมชน</a></li>
             <li><a href="#">คำถามที่พบบ่อย</a></li>
-        </ul>
         <div class="cart">
-            <a href="#">
+            <a href="product_cart.html">
                 <i class="fas fa-shopping-cart"></i>
                 <!-- หรือถ้าต้องการใช้รูปภาพแทนไอคอน -->
                 <!-- <img src="img/cart-icon.png" alt="Cart"> -->
@@ -29,12 +28,6 @@
     </nav>
 
     <header>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
         <div class="banner">
             <img src="img/Banner_home.jpg" alt="Banner">
         </div>
@@ -42,10 +35,10 @@
 
     <div class="container">
         <div class="project">
-            <img src="img/example-picture.jpg" alt="Example Picture">
+            <img src="img/example.jpg" alt="Example Picture" width = "550" height="550">
             <div class="project-details">
                 <h2>Hantaphao Project</h2>
-                
+                <p>วัตถุประสงค์ของโครงการ Hantaphao คือการให้การพัฒนาที่ยั่งยืนให้กับชุมชนโดยการผสมผสานการจัดการทรัพยากรธรรมชาติและการอนุรักษ์สิ่งแวดล้อม โครงการนี้มุ่งเน้นการเพิ่มคุณภาพชีวิตของชุมชนในท้องถิ่นผ่านการปฏิบัติที่ยั่งยืน</p>
             </div>
         </div>
         <div class="objective">
