--- a/product_cart.html
+++ b/product_cart.html
@@ -4,79 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping Cart</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        #navbar {
-            background-color: #f8f8f8;
-            padding: 10px;
-            text-align: center;
-            border-bottom: 1px solid #ddd;
-        }
-        h1 {
-            text-align: center;
-        }
-        #products {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        .product {
-            margin: 0 10px;
-        }
-        table {
-            width: 80%;
-            margin: 20px auto;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 10px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        .cart-summary {
-            width: 80%;
-            margin: 20px auto;
-            text-align: right;
-        }
-        .checkout-button {
-            margin-top: 10px;
-            background-color: green;
-            color: white;
-            padding: 10px;
-            border: none;
-            cursor: pointer;
-        }
-        .checkout-button:hover {
-            background-color: darkgreen;
-        }
-        .quantity-control {
-            display: flex;
-            align-items: center;
-        }
-        .quantity-control button {
-            background-color: #ddd;
-            border: none;
-            padding: 5px;
-            cursor: pointer;
-        }
-        .quantity-control button:hover {
-            background-color: #ccc;
-        }
-        .quantity-control span {
-            margin: 0 10px;
-        }
-        footer {
-            background-color: #f8f8f8;
-            padding: 20px;
-            text-align: center;
-            border-top: 1px solid #ddd;
-        }
-        footer div {
-            margin-bottom: 10px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="navbar"></div> <!-- ส่วนนี้จะถูกแทนที่ด้วยเนื้อหาจาก topnavbar.html -->
@@ -126,8 +54,21 @@
                 .catch(error => console.error('Error loading navbar:', error));
         }
 
-        // Load the navbar when the page loads
-        window.onload = loadNavbar;
+        // Function to load the footer from footer.html
+        function loadFooter() {
+            fetch('footer.html')
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('footer').innerHTML = data;
+                })
+                .catch(error => console.error('Error loading footer:', error));
+        }
+
+        // Load the navbar and footer when the page loads
+        window.onload = function() {
+            loadNavbar();
+            loadFooter();
+        };
 
         let cart = [];
 
@@ -195,5 +136,9 @@
             displayCart();
         }
     </script>
+
+    <div id="footer"></div> <!-- ส่วนนี้จะถูกแทนที่ด้วยเนื้อหาจาก footer.html -->
+
+    <script src="Footer.js"></script>
 </body>
 </html>
