--- a/topnavbar.html
+++ b/topnavbar.html
@@ -13,20 +13,17 @@
     <nav class="navbar">
         <div class="logo">
             <a href="index.html">
-                <img src="img/logo.png" alt="Logo">
+            <img src="img/logo.png" alt="Logo">
             </a>
         </div>
         <ul class="nav-links">
             <li><a href="#">เกี่ยวกับโครงการ</a></li>
-            <li><a href="#">ผลิตภัณฑ์</a></li>
+            <li><a href="product.html">ผลิตภัณฑ์</a></li>
             <li><a href="#">ข่าวสารจากชุมชน</a></li>
             <li><a href="#">คำถามที่พบบ่อย</a></li>
-        </ul>
         <div class="cart">
-            <a href="#">
+            <a href="product_cart.html">
                 <i class="fas fa-shopping-cart"></i>
-                <!-- หรือถ้าต้องการใช้รูปภาพแทนไอคอน -->
-                <!-- <img src="img/cart-icon.png" alt="Cart"> -->
             </a>
         </div>
     </nav>
