--- a/product_cart.html
+++ b/product_cart.html
@@ -10,20 +10,6 @@
     <div id="navbar"></div> <!-- ส่วนนี้จะถูกแทนที่ด้วยเนื้อหาจาก topnavbar.html -->
 
     <h1>Shopping Cart</h1>
-    <div id="products">
-        <div class="product">
-            <span>Product 1</span>
-            <button onclick="addToCart('Product 1', 30)">Add to Cart</button>
-        </div>
-        <div class="product">
-            <span>Product 2</span>
-            <button onclick="addToCart('Product 2', 120)">Add to Cart</button>
-        </div>
-        <div class="product">
-            <span>Product 3</span>
-            <button onclick="addToCart('Product 3', 49)">Add to Cart</button>
-        </div>
-    </div>
 
     <table class="cart-table">
         <thead>
@@ -40,7 +26,7 @@
             <!-- ตัวอย่างข้อมูลสินค้าที่มีอยู่ในตะกร้า -->
             <tr>
                 <td><input type="checkbox"></td>
-                <td><img src="path/to/image1.png" alt="Rice"> ข้าว</td>
+                <td><img src="img/ricepot.png" alt="Rice"> ข้าว</td>
                 <td>50</td>
                 <td class="quantity-control">
                     <button onclick="decreaseQuantity(0)">-</button>
@@ -52,7 +38,7 @@
             </tr>
             <tr>
                 <td><input type="checkbox"></td>
-                <td><img src="path/to/image2.png" alt="Corn"> ข้าวโพด</td>
+                <td><img src="img/Corn-modern-3.png" alt="Corn"> ข้าวโพด</td>
                 <td>120</td>
                 <td class="quantity-control">
                     <button onclick="decreaseQuantity(1)">-</button>
@@ -64,7 +50,7 @@
             </tr>
             <tr>
                 <td><input type="checkbox"></td>
-                <td><img src="path/to/image3.png" alt="Shoes"> รองเท้า</td>
+                <td><img src="img/shoe.png" alt="Shoes"> รองเท้า</td>
                 <td>40</td>
                 <td class="quantity-control">
                     <button onclick="decreaseQuantity(2)">-</button>
