--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         <div class="logo">
             <img src="img/logo.png" alt="Logo">
         </div>
-        <ul class="nav-links">
+        <div class="menu-toggle" id="mobile-menu">
+            <i class="fas fa-bars"></i>
+        </div>
+        <ul class="nav-links" id="nav-links">
             <li><a href="#">เกี่ยวกับโครงการ</a></li>
             <li><a href="#">ผลิตภัณฑ์</a></li>
             <li><a href="#">ข่าวสารจากชุมชน</a></li>
             <li><a href="#">คำถามที่พบบ่อย</a></li>
+        </ul>
         <div class="cart">
-            <a href="product_cart.html">
-                <i class="fas fa-shopping-cart"></i>
-                <!-- หรือถ้าต้องการใช้รูปภาพแทนไอคอน -->
-                <!-- <img src="img/cart-icon.png" alt="Cart"> -->
-            </a>
+            <a href="#"><i class="fa fa-shopping-cart"></i></a>
         </div>
     </nav>
 
@@ -35,9 +35,8 @@
 
     <div class="container">
         <div class="project">
-            <img src="img/example.jpg" alt="Example Picture" width = "550" height="550">
+            <img src="img/example.jpg" alt="Example Picture" width="550" height="550">
             <div class="project-details">
-                
                 <p>วัตถุประสงค์ของโครงการ Hantaphao คือการให้การพัฒนาที่ยั่งยืนให้กับชุมชนโดยการผสมผสานการจัดการทรัพยากรธรรมชาติและการอนุรักษ์สิ่งแวดล้อม โครงการนี้มุ่งเน้นการเพิ่มคุณภาพชีวิตของชุมชนในท้องถิ่นผ่านการปฏิบัติที่ยั่งยืน</p>
             </div>
         </div>
@@ -72,6 +71,7 @@
         </div>
         <p>©2024 Hantaphao Projects All rights reserved.</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
