--- a/product_cart.html
+++ b/product_cart.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="th">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hantaphao Project</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+</head>
 <body>
     <div id="navbar"></div> <!-- ส่วนนี้จะถูกแทนที่ด้วยเนื้อหาจาก topnavbar.html -->
 
@@ -18,7 +28,7 @@
             <!-- ตัวอย่างข้อมูลสินค้าที่มีอยู่ในตะกร้า -->
             <tr>
                 <td><input type="checkbox"></td>
-                <td><img src="img/ricepot.png" alt="Rice"> ข้าว</td>
+                <td><img src="img/ricepot.jpg" alt="Rice"> ข้าว</td>
                 <td>50</td>
                 <td class="quantity-control">
                     <button onclick="decreaseQuantity(0)">-</button>
@@ -30,7 +40,7 @@
             </tr>
             <tr>
                 <td><input type="checkbox"></td>
-                <td><img src="img/Corn-modern-3.png" alt="Corn"> ข้าวโพด</td>
+                <td><img src="img/Corn-modern-3.jpg" alt="Corn"> ข้าวโพด</td>
                 <td>120</td>
                 <td class="quantity-control">
                     <button onclick="decreaseQuantity(1)">-</button>
@@ -42,7 +52,7 @@
             </tr>
             <tr>
                 <td><input type="checkbox"></td>
-                <td><img src="img/shoe.png" alt="Shoes"> รองเท้า</td>
+                <td><img src="img/shoe.jpg" alt="Shoes"> รองเท้า</td>
                 <td>40</td>
                 <td class="quantity-control">
                     <button onclick="decreaseQuantity(2)">-</button>
