--- a/order.html
+++ b/order.html
@@ -19,7 +19,7 @@
                 <img src="/img/bank-image.jpg" alt="Bank Account">
             </div>
         </div>
-        <form id="payment-form" onsubmit="handleSubmit(event)">
+        <form id="payment-form" action="process_order.php" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="name">ชื่อคนสั่ง:</label>
                 <input type="text" id="name" name="name" required>
@@ -68,14 +68,6 @@
             loadNavbar();
             loadFooter();
         };
-
-        function handleSubmit(event) {
-            event.preventDefault();
-            const formData = new FormData(event.target);
-            // Implement your form submission logic here (e.g., send formData to the server)
-            console.log('Form submitted:', formData);
-            alert('ข้อมูลถูกส่งเรียบร้อยแล้ว!');
-        }
     </script>
 </body>
 </html>
