--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#">คำถามที่พบบ่อย</a></li>
         </ul>
         <div class="cart">
-            <a href="#"><i class="fa fa-shopping-cart"></i></a>
+            <a href="product_cart.html"><i class="fa fa-shopping-cart"></i></a>
         </div>
     </nav>
 
