--- a/orderForm.html
+++ b/orderForm.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="navbar"></div> <!-- ส่วนนี้จะถูกแทนที่ด้วยเนื้อหาจาก topnavbar.html -->
 
     <h1>Order Page</h1>
     
@@ -19,7 +18,7 @@
                 <img src="/img/bank-image.jpg" alt="Bank Account">
             </div>
         </div>
-        <form id="payment-form" action="process_order.php" method="POST" enctype="multipart/form-data">
+        <form id="payment-form" action="orderInsert.php" method="POST" enctype="multipart/form-data">
             <div class="form-group">
                 <label for="name">ชื่อคนสั่ง:</label>
                 <input type="text" id="name" name="name" required>
@@ -39,35 +38,5 @@
             <button type="submit">ส่งข้อมูล</button>
         </form>
     </div>
-
-    <div id="footer"></div> <!-- ส่วนนี้จะถูกแทนที่ด้วยเนื้อหาจาก footer.html -->
-
-    <script>
-        // Function to load the navbar from topnavbar.html
-        function loadNavbar() {
-            fetch('topnavbar.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('navbar').innerHTML = data;
-                })
-                .catch(error => console.error('Error loading navbar:', error));
-        }
-
-        // Function to load the footer from footer.html
-        function loadFooter() {
-            fetch('footer.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('footer').innerHTML = data;
-                })
-                .catch(error => console.error('Error loading footer:', error));
-        }
-
-        // Load the navbar and footer when the page loads
-        window.onload = function() {
-            loadNavbar();
-            loadFooter();
-        };
-    </script>
 </body>
 </html>
