--- a/orderForm.html
+++ b/orderForm.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Pay Forn</title>
 </head>
 <body>
 
-    <h1>Order Page</h1>
+    <h1>Pay Forn</h1>
     
     <div class="order-form">
         <div class="form-group bank-details">
