--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             flex: 2;
             background-color: #2c3f20; /* Green background */
             color: white;
-            padding: 0px 300px 74px 89px;
+            padding: 0px 50px 74px 89px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.8); /* Add shadow for a raised effect */
         }
         .right h1 {
@@ -86,61 +86,141 @@
             margin-bottom: -40px;
             margin-left: 800px; 
         }
-        
+         /* Slideshow container */
+         .slideshow-container {
+            position: relative;
+            max-width: 100%;
+            margin: auto;
+            overflow: hidden;
+            width: 1400px; /* Set the width of the slideshow container */
+            height: 480px; /* Set the height of the slideshow container */
+        }
+
+        /* Hide the images by default */
+        .mySlides {
+            display: none;
+        }
+
+        /* Next & previous buttons */
+        .prev, .next {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            width: auto;
+            padding: 16px;
+            margin-top: -22px;
+            color: rgb(255, 255, 255,2);
+            font-weight: bold;
+            font-size: 45px;
+            transition: 0.6s ease;
+            border-radius: 0 3px 3px 0;
+            user-select: none;
+        }
+
+        /* Position the "next button" to the right */
+        .next {
+            right: 0;
+            border-radius: 3px 0 0 3px;
+        }
+
+        /* Number text (1/3 etc) */
+        .numbertext {
+            color: #f2f2f2;
+            font-size: 12px;
+            padding: 8px 12px;
+            position: absolute;
+            top: 0;
+        }
+
+        .dot-container {
+        position: absolute;
+        bottom: 50px; /* Adjust the bottom position as needed */
+        width: 100%;
+        text-align: center;
+        z-index: 10; /* Ensure dots are above the images */
+        }
+
+        .dot {
+        cursor: pointer;
+        height: 15px;
+        width: 15px;
+        margin: 0 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+        position: relative; /* Add this to position the dots relative to their parent */
+        top: -40px; /* Move the dots up by 20px */
+}
+        .active, .dot:hover {
+            background-color: #717171;
+        }
+
         @media (max-width: 1024px) {
-            .container {
-                display: flex;
-                flex-direction: column;
-                align-items: center; /* Center align items */
-            }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Center align items */
+        }
 
-            .PR_pic {
-                width: 100%; /* Fill the width of its container */
-                text-align: center; /* Center align content */
-                margin-bottom: 20px; /* Add margin bottom for spacing */
-            }
+        .PR_pic {
+            width: 100%; /* Fill the width of its container */
+            text-align: center; /* Center align content */
+            margin-bottom: 20px; /* Add margin bottom for spacing */
+        }
 
-            .PR_pic img {
-                width: 100%; /* Set image width to 100% */
-                max-width: none; /* Ensure the image can expand fully */
-                height: auto; /* Maintain aspect ratio */
-            }
+        .PR_pic img {
+            width: 100%; /* Set image width to 100% */
+            max-width: none; /* Ensure the image can expand fully */
+            height: auto; /* Maintain aspect ratio */
+        }
 
-            .right {
-                flex: 1; /* Occupy full width */
-                background-color: #3B5929; /* Green background */
-                color: white;
-                padding: 20px; /* Add padding inside the right section */
-                text-align: left; /* Align text to the left */
-                margin-top: 20px; /* Add space between PR_pic and right sections */
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow for a raised effect */
-            }
+        .right {
+            flex: 0; /* Occupy full width */
+            background-color: #3B5929; /* Green background */
+            color: white;
+            text-align: left; /* Align text to the left */
+            margin-top: -16px; /* Remove margin top */
+            padding: 25px 130px 70px 70px; /* Add padding to make the content more readable */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow for a raised effect */
+            max-width: 80%; /* Limit the width to 80% of the parent container */
 
-            .right h1 img {
-                width: 70px; /* Adjust image width for smaller screens */
-                height: 70px; /* Adjust image height for smaller screens */
-                margin-left: -30px; /* Adjust margin left */
-                margin-top: 5px; /* Adjust margin top */
-            }
-            .right h1 {
-                font-size: 3em; /* Adjust font size */
-                margin: 0 0 0 0;
-            }
+}
+        }
 
-            .right h2 {
-                font-size: 1.5em; /* Adjust font size */    
-                margin: 0;
-            }
+        .right h1 img {
+            width: 70px; /* Adjust image width for smaller screens */
+            height: 70px; /* Adjust image height for smaller screens */
+            margin-left: 0; /* Adjust margin left */
+            margin-top: 5px; /* Adjust margin top */
+        }
 
-            .right p {
-                margin: 10px 0; /* Add margin around paragraphs */
-            }
+        .right h1 {
+            font-size: 3em; /* Adjust font size */
+            margin: 0; /* Remove margin */
+        }
 
-            .right .column {
-                column-count: 1; /* Display text in a single column on smaller screens */
-                column-gap: 0; /* No gap between columns */
-            }
+        .right h2 {
+            font-size: 1.5em; /* Adjust font size */    
+            margin-top: -15px; /* Remove margin */
+        }
 
+        .right p {
+            margin: 10px 20px; /* Adjust margin around paragraphs */
+        }
+
+        .right .sec1{
+            font-size: 3.5em;
+            margin-top: -30px;
+            font-weight: 800;
+            color: #3abe1f;
+            margin-bottom: -40px;
+            margin-left: 500px; 
+        }
+        .right.column {
+            column-count: 1; /* Display text in a single column on smaller screens */
+            column-gap: 0; /* No gap between columns */
+        }
             .objective,
             .product {
                 flex: 1; /* Occupy full width on smaller screens */
@@ -160,7 +240,20 @@
             .product p {
                 margin-top: 10px; /* Add margin above paragraphs */
             }
+            .slideshow-container {
+        height: 300px; /* Adjust the height for smaller screens */
         }
+        .prev,.next {
+            font-size: 30px; /* Reduce font size for smaller screens */
+        }
+        .dot-container {
+            bottom: 10px; /* Adjust the bottom position for smaller screens */
+        }
+        .dot {
+            height: 10px;
+            width: 10px; /* Reduce dot size for smaller screens */
+        }
+
     </style>
 </head>
 <body>
@@ -213,8 +306,29 @@
         <p>โครงการ Hantaphao มีเป้าหมายที่จะสร้างการพัฒนาที่ยั่งยืนให้กับชุมชนโดยการจัดการทรัพยากรธรรมชาติและการอนุรักษ์สิ่งแวดล้อม</p>
     </div>
     <div class="product">
-        <h3>ผลิตภัณฑ์</h3>
-        <img src="" alt="Product Image">
+        <h1>ผลิตภัณฑ์</h1>
+        <div class="slideshow-container">
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="img/Element/Product_1.jpg" style="width:100%">
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="img/product2.jpg" style="width:100%">
+            </div>
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="img/product3.jpg" style="width:100%">
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <br>
+        <div style="text-align:center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+        </div>
     </div>
 
     <footer>
@@ -238,7 +352,34 @@
         </div>
         <p>©2024 Hantaphao Projects All rights reserved.</p>
     </footer>
+    <script>
+        let slideIndex = 1;
+        showSlides(slideIndex);
 
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            let dots = document.getElementsByClassName("dot");
+            if (n > slides.length) {slideIndex = 1}
+            if (n < 1) {slideIndex = slides.length}
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex-1].style.display = "block";
+            dots[slideIndex-1].className += " active";
+        }
+    </script>
     <script src="js/navscript.js"></script>
 </body>
 </html>
