--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <style>
         
         .PR_pic {
@@ -305,26 +306,24 @@
 <body >
     <nav class="navbar">
         <div class="logo">
-            <img src="img/Logo.png" alt="Logo" width="100px" height="100px">
+            <a href="index.html"><img src="img/Logo.png" alt="Logo" width="100px" height="100px"></a>>
         </div>
         <div class="menu-toggle" id="mobile-menu">
             <i class="fas fa-bars"></i>
         </div>
         <ul class="nav-links" id="nav-links">
-            <li><a href="#">เกี่ยวกับโครงการ ▾</a>
-                <ul class="dropdown">
-                    <li><a href="mushroom.html">โรงเห็ดอัจฉริยะ</a></li>
-                    <li><a href="furnance.html">เคาเผาถ่านไร้ควัน</a></li>
-                    <li><a href="riceMill.html">โรงสีข้าว</a></li>
-                </ul>
-            </li>
-            <li><a href="#">ผลิตภัณฑ์</a></li>
-            <li><a href="#">ข่าวสารจากชุมชน</a></li>
+            <li><a href="#">ข้อมูลชุมชน </a></li>
+            <li><a href="products.php">ผลิตภัณฑ์</a></li>
+            <li><a href="check_order.php">เช็คออเดอร์</a></li>
             <li><a href="#">คำถามที่พบบ่อย</a></li>
         </ul>
         <div class="cart">
-            <a href="#"><i class="fa fa-shopping-cart"></i></a>
-        </div>
+                <a href="cart.php" class="cart-icon">
+                    <i class="fas fa-shopping-cart"></i>
+                    <span class="cart-count" id="cart-count">0</span> <!-- ตัวนับจำนวนสินค้าในตะกร้า -->
+                </a>
+            </div>
+       
     </nav>
 
     <header>
@@ -358,7 +357,11 @@
         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;โครงการนี้มุ่งเน้นการพัฒนาชุมชนหันตะเภาในอำเภอวังน้อย จังหวัดพระนครศรีอยุธยา โดยมีวัตถุประสงค์หลักในการศึกษาพัฒนาระบบควบคุมอัตโนมัติในโรงเรือนเห็ดและสร้างโรงเรือนเห็ดอัจฉริยะเพื่อเพิ่มผลผลิตอย่างมีประสิทธิภาพ, ออกแบบและสร้างเตาเผาชีวมวลไร้ควันเพื่อการผลิตถ่านและน้ำส้มควันไม้เชิงพาณิชย์ที่เป็นมิตรกับสิ่งแวดล้อม, พัฒนาเครื่องสีข้าวอินทรีย์ดัชนีน้ำตาลต่ำเพื่อเพิ่มประสิทธิภาพการผลิตและยกระดับคุณภาพผลิตภัณฑ์ของชุมชน, รวมทั้งศึกษาการนำเทคโนโลยีแพลตฟอร์มดิจิตอลมาใช้เพื่อเพิ่มมูลค่าผลิตภัณฑ์ของภูมิปัญญาท้องถิ่นและพัฒนาแพลตฟอร์มดิจิตอลสำหรับธุรกิจผลิตภัณฑ์ชุมชนอย่างยั่งยืน</p>
     </div>
     <div class="product">
-        <h1>ผลิตภัณฑ์ <img src="img/cart2.png" alt="cart Icon" width="90px" height="90px"></h1>
+        <h1>ผลิตภัณฑ์ 
+            <a href="products.php">
+                <img src="img/cart2.png" alt="Cart Icon" width="90px" height="90px">
+            </a>
+        </h1>
         <div class="slideshow-container">
             <div class="mySlides fade">
                 <img src="img/Element/Product_1.jpg" style="width:100%">
