เพิ่มลบแก้ไข 07/08/68

--- a/food-qr-frontend/public/index.html
+++ b/food-qr-frontend/public/index.html
@@ -25,6 +25,27 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      @media print {
+        body * {
+          visibility: hidden;
+        }
+        #print-area, #print-area * {
+          visibility: visible;
+        }
+        #print-area {
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 100%;
+          text-align: center;
+        }
+        #print-area button,
+        #print-area .MuiDialogActions-root {
+          display: none !important;
+        }
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
